# benchmark-field-level

./: LICENSE  README.md  pyproject.toml
examples/: infer_model.ipynb  sample_analysis.ipynb
flbench/: bricks.py  chains.py  mcbench.py  metrics.py  model.py  nbody.py  plot.py  samplers.py  script.py  utils.py
intro/: infer_model.ipynb  sample_analysis.ipynb
tuto/: infer_model.ipynb  sample_analysis.ipynb
