[build-system]
requires = ["setuptools >= 64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flbench"
version = "0.0.1"
authors = [{name="Hugo Simon-Onfroy"}] # email=""
description = "Benchmarking field-level cosmological inference from galaxy surveys ."
dependencies = ["numpy"]
readme = "README.md"
requires-python = ">=3.7"
urls = {Repository="https://github.com/hsimonfroy/benchmark-field-level"} # Documentation=""

[tool.setuptools]
packages = ["flbench"]