[build-system]
requires = ["setuptools >= 64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flbench"
version = "0.0.1"
authors = [{name="Hugo Simon-Onfroy"}] # email=""
description = "Benchmarking field-level cosmological inference from galaxy surveys."
dependencies = ["numpyro",
                "jax-cosmo",
                "jaxpm @ git+https://github.com/DifferentiableUniverseInitiative/JaxPM.git@v0.0.2",
                "diffrax",
                "blackjax",
                "getdist",
                "graphviz",]
readme = "README.md"
requires-python = ">=3.8"
urls = {Repository="https://github.com/hsimonfroy/benchmark-field-level"} # Documentation=""

[tool.setuptools]
packages = ["flbench"]
